--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,7 @@
           <legend>Sign Up</legend>
           <input type="text" id="name" required placeholder="Name" />
           <input type="email" id="email" placeholder="Email"/>
+          <input type="password" name="Password" id="">
           <input type="submit" value="Sign Up" />
         </form>
       </div>
